# Consci-ncia-Financeira

./: .gitignore  pyproject.toml
Consciencia_Financeira/: app.py  app.spec
Consciencia_Financeira/functions_aux/: expenses_graph.py  filters.py
Consciencia_Financeira/instance/: financeiro.sqlite3
Consciencia_Financeira/models/: models.py
Consciencia_Financeira/repositories/: expenses_repository.py  user_repository.py
Consciencia_Financeira/routes/: expenses_route.py  home_route.py  index_route.py  user_route.py
Consciencia_Financeira/templates/: add_expense.html  base.html  base_loged.html  expenses.html  home.html  index.html  login.html  register.html
